[project]
name = "repo-debug-agent"
version = "0.1.0"
description = "Repo-Aware Autonomous Debugging Agent with Paritok token optimization"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.4.0",
    "loguru>=0.7.2",
    "GitPython>=3.1.43",
    "PyGithub>=2.3.0",
    "tree-sitter>=0.20.4",
    "tree-sitter-languages>=1.10.2",
    "pathspec>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
